refactor(frontend): migrate to Angular 21 and update templates to use new control flow syntax
feat(frontend): add zone change detection in main.ts
fix(frontend): remove CommonModule imports from standalone components
chore(frontend): update Angular dependencies to v21
style(frontend): clean up template syntax and formatting
refactor(frontend): replace *ngIf/*ngFor with new @if/@for syntax
build(frontend): update angular.json for new build system

--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/servidor.js",
   "scripts": {
-    "dev": "nodemon src/servidor.js",
-    "start": "node src/servidor.js",
+    "dev": "nodemon -r dotenv/config src/servidor.js",
+    "start": "node -r dotenv/config src/servidor.js",
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push",
     "prisma:migrate": "prisma migrate dev --name init"
