--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^21.0.8",
     "@angular/router": "^21.0.8",
     "@angular/service-worker": "^21.0.8",
+    "@capacitor/android": "^7.4.5",
     "@capacitor/app": "7.1.0",
     "@capacitor/core": "7.4.4",
     "@capacitor/haptics": "7.0.2",
