--- a/frontend-app/angular.json
+++ b/frontend-app/angular.json
@@ -49,7 +49,8 @@
               "raf",
               "rgbcolor",
               "file-saver",
-              "html2canvas"
+              "html2canvas",
+              "@stencil/core"
             ],
             "browser": "src/main.ts"
           },
