--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-app",
+  "name": "smartpos-app",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -53,6 +53,7 @@
     "@angular/cli": "^21.0.5",
     "@angular/compiler-cli": "^21.0.8",
     "@angular/language-service": "^21.0.8",
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "7.4.4",
     "@ionic/angular-toolkit": "^12.0.0",
     "@types/jasmine": "~5.1.0",
