--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@fastify/compress": "^8.3.1",
     "@fastify/cors": "^10.0.1",
     "@fastify/jwt": "^10.0.0",
     "@fastify/multipart": "^9.3.0",
