--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -39,6 +39,7 @@
     "jspdf-autotable": "^5.0.2",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.26.17",
     "tslib": "^2.3.0",
     "xlsx": "https://cdn.sheetjs.com/xlsx-latest/xlsx-latest.tgz",
     "zone.js": "~0.15.0"
