--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@fastify/compress": "^8.3.1"
+    "@fastify/compress": "^8.3.1",
+    "sweetalert2": "^11.26.17"
   }
 }
