--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -26,9 +26,11 @@
     "@capacitor/android": "^7.4.5",
     "@capacitor/app": "7.1.0",
     "@capacitor/core": "7.4.4",
+    "@capacitor/filesystem": "^7.0.0",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/keyboard": "7.0.3",
     "@capacitor/push-notifications": "^7.0.4",
+    "@capacitor/share": "^7.0.0",
     "@capacitor/status-bar": "7.0.3",
     "@ionic/angular": "^8.0.0",
     "@types/file-saver": "^2.0.7",
