fix(reports): correct growth calculation for zero previous revenue
Previously, when there was no previous revenue but current revenue existed,
the growth was artificially set to 100%, which was mathematically incorrect
and misleading. The calculation now returns 0% growth in such cases to
indicate a lack of comparable data, avoiding division by zero.

Also adds the sweetalert2 dependency to the project configuration.

--- a/frontend-app/angular.json
+++ b/frontend-app/angular.json
@@ -50,7 +50,8 @@
               "rgbcolor",
               "file-saver",
               "html2canvas",
-              "@stencil/core"
+              "@stencil/core",
+              "sweetalert2"
             ],
             "browser": "src/main.ts"
           },
